--- a/deploy/deployment.yml
+++ b/deploy/deployment.yml
@@ -1,1 +1,35 @@
 ---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: nuxt-mono-deployment
+  labels:
+    app: nginx
+spec:
+  replicas: 2
+  selector:
+    matchLabels:
+      app: nuxt
+  template:
+    metadata:
+      labels:
+        app: nuxt
+    spec:
+      containers:
+      - name: nuxt-mono
+        image: ghcr.io/funng-guys/nuxt-mono:main
+        ports:
+        - containerPort: 3000
+
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: nuxt-mono
+spec:
+  selector:
+    app.kubernetes.io/name: nuxt-mono
+  ports:
+    - protocol: TCP
+      port: 80
+      targetPort: 3000
