--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -55,7 +55,7 @@ jobs:
         with:
           context: ./webapp
           push: true
-          tags: ${{ steps.meta.outputs.tags }}
+          tags: ${{ steps.meta.outputs.tags }}, ${{ github.base_ref }}-latest            
           labels: ${{ steps.meta.outputs.labels }}
 
       - name: Generate artifact attestation
