--- a/deploy/deployment.yml
+++ b/deploy/deployment.yml
@@ -33,3 +33,15 @@ spec:
     - protocol: TCP
       port: 80
       targetPort: 3000
+
+---
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: nuxt-mono-ingress
+spec:
+  defaultBackend:
+    service:
+      name: nuxt-mono
+      port:
+        number: 80
