--- a/deploy/deployment.yml
+++ b/deploy/deployment.yml
@@ -4,20 +4,21 @@ kind: Deployment
 metadata:
   name: nuxt-mono-deployment
   labels:
-    app: nuxt-mono
+    app: nuxtapp
 spec:
   replicas: 2
   selector:
     matchLabels:
-      app: nuxt-mono
+      app: nuxtapp
   template:
     metadata:
       labels:
-        app: nuxt-mono
+        app: nuxtapp
     spec:
       containers:
       - name: nuxt-mono
         image: ghcr.io/funng-guys/nuxt-mono:main
+        imagePullPolicy: Always
         ports:
         - containerPort: 3000
 
@@ -28,7 +29,7 @@ metadata:
   name: nuxt-mono-service
 spec:
   selector:
-    app: nuxt-mono
+    app: nuxtapp
   ports:
     - protocol: TCP
       port: 80
